WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181418
AccessibilityARIAGrid does not compile when accessibility is disabled
https://bugs.webkit.org/show_bug.cgi?id=181418
Summary
AccessibilityARIAGrid does not compile when accessibility is disabled
Don Olmstead
Reported
2018-01-08 17:24:09 PST
AccessibilityARIAGrid cannot find AXPropertyName when !HAVE(ACCESSIBILITY)
Attachments
Patch
(1.13 KB, patch)
2018-01-08 17:28 PST
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-01-08 17:26:49 PST
<
rdar://problem/36365398
>
Don Olmstead
Comment 2
2018-01-08 17:28:52 PST
Created
attachment 330764
[details]
Patch Add an include for "AccessibleNode.h" to make everything work.
WebKit Commit Bot
Comment 3
2018-01-08 18:16:20 PST
Comment on
attachment 330764
[details]
Patch Clearing flags on attachment: 330764 Committed
r226606
: <
https://trac.webkit.org/changeset/226606
>
WebKit Commit Bot
Comment 4
2018-01-08 18:16:22 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug