AccessibilityARIAGrid does not compile when accessibility is disabled https://bugs.webkit.org/show_bug.cgi?id=181418 <rdar://problem/36365398>

Reviewed by Chris Fleizach.

No new tests. No change in behavior.

* accessibility/AccessibilityARIAGrid.cpp:


Canonical link: https://commits.webkit.org/197263@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226606 268f45cc-cd09-0410-ab3c-d52691b4dbfc